--- a/package.json
+++ b/package.json
@@ -2,15 +2,23 @@
   "name": "game-price-check",
   "version": "1.0.0",
   "description": "Collect SERP information for list of board games",
-  "main": "index.js",
+  "main": "bin/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
   "license": "ISC",
+  "bin": {
+    "hello": "./bin/index.js"
+  },
   "dependencies": {
+    "csv-reader": "^1.0.8",
     "csv-writer": "^1.6.0",
     "google-search-results-nodejs": "^2.0.1"
+  },
+  "devDependencies": {
+    "@types/node": "^16.9.6",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
