--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "style": "prettier --write --single-quote src/*.ts bin/index.js",
-    "start": "ts-node ."
+    "start": "ts-node .",
+    "update-data": "cp out.csv src/data.csv"
   },
   "author": "",
   "license": "ISC",
